--- a/css/style.css
+++ b/css/style.css
@@ -18,27 +18,56 @@ html {
 
 body {
   font-size: 1.5rem;
-  background: #101010; }
+  background: #101010;
+  font-family: 'Merriweather', serif; }
 
 main {
   background: lightgray;
   width: 1080px;
   margin: 0 auto;
-  height: 200vh; }
+  min-height: 200vh; }
+
+.main--fixed {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem; }
+
+header {
+  padding-bottom: 5rem;
+  height: 5rem;
+  line-height: 5rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: bold;
+  background: #202020;
+  color: cyan;
+  font-style: italic; }
 
 .nav {
-  position: fixed;
   background: #303030;
   width: 1080px;
+  z-index: 999;
   display: flex;
   align-items: center;
   justify-content: start;
   color: white;
-  box-shadow: 0 2px 2px black; }
+  box-shadow: 0 2px 2px black;
+  transition: color 0.3s, background 0.3s, box-shadow 0.3s; }
+  .nav--fixed {
+    position: fixed;
+    top: 0;
+    box-shadow: 0 2px 6px black; }
   .nav_item {
     margin: 0 0.5rem;
     padding: 1rem;
     transition: color 0.2s; }
+    .nav_item--selected {
+      color: cyan; }
     .nav_item:hover {
-      cursor: pointer;
-      color: #ffaffb; }
+      color: cyan;
+      cursor: pointer; }
+
+.section {
+  margin: 1rem;
+  display: none; }
+  .section-git {
+    display: block; }
